--- a/css/output.css
+++ b/css/output.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 @font-face {
   font-family: "Muller";
-  src: url("/src/font/MullerRegular.otf") format("opentype");
+  src: url("../font/MullerRegular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Muller";
-  src: url("/src/font/MullerBold.otf") format("opentype");
+  src: url("../font/MullerBold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
 }
