--- a/css/scss/font.scss
+++ b/css/scss/font.scss
@@ -2,14 +2,14 @@
 
 @font-face {
     font-family: "Muller";
-    src: url("/src/font/MullerRegular.otf") format("opentype");
+    src: url("../font/MullerRegular.otf") format("opentype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Muller";
-    src: url("/src/font/MullerBold.otf") format("opentype");
+    src: url("../font/MullerBold.otf") format("opentype");
     font-weight: 700;
     font-style: normal;
 }
